<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/message"/>


    <item
        android:id="@+id/nav_sync"
        android:icon="@drawable/baseline_sync_24"
        android:title="@string/sync"/>


    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/baseline_delete_forever_24"
        android:title="@string/delete"/>


    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/setting"/>

    <item
        android:title="@string/profile">
        <menu>

            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/baseline_login_24"
                android:title="@string/login"/>

        </menu>

    </item>


    <item
        android:title="@string/communicate">

       <menu>
           <item
               android:id="@+id/nav_share"
               android:icon="@drawable/baseline_share_24"
               android:title="@string/share"/>
           <item
               android:id="@+id/nav_rate"
               android:icon="@drawable/baseline_rate_review_24"
               android:title="@string/rate_us"/>

       </menu>

    </item>


</menu>